--- a/www/settings.haml
+++ b/www/settings.haml
@@ -1,5 +1,5 @@
 %ons-toolbar
-  .center Transactions
+  .center Settings
   .right
     %ons-toolbar-button
       %a.refresh-btn{ onclick: "fn.refreshPage()" }
