--- a/www/index.haml
+++ b/www/index.haml
@@ -1,69 +1,38 @@
 :ruby
   require_relative 'env'
+  onsen_prod = false
 
 !!!
 %html
   %head
-    / <meta http-equiv="Content-Security-Policy" content="default-src 'self' data: gap: https://ssl.gstatic.com 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: content:;">
-    %meta{ content: "telephone=no", name: "format-detection" }/
-    %meta{ content: "no", name: "msapplication-tap-highlight" }/
-    %meta{ content: "initial-scale=1, width=device-width, viewport-fit=cover", name: "viewport" }/
-    -# %meta{ content: "yes",  name: "mobile-web-app-capable"}/
-    -# icons - https://ionicons.com/ - https://github.com/ionic-team/ionicons
-    %style{ scoped: true }
-      :plain
-        #{INJ_FONT_CSS}
-    %link{ href: "css/vendor/ionic-icons.css", rel: "stylesheet" }/
-    %link{ href: "css/vendor/onsen.css", rel: "stylesheet" }/
-    %link{ href: "css/vendor/onsen-comp.css", rel: "stylesheet" }/
-    %link{ href: "css/vendor/onsen-theme.css", rel: "stylesheet" }/
-    - onsen_prod = false
-    -# - onsen_prod = true
+    - partial "_head"
     - unless onsen_prod
       %script console.warn("Switch to Onsen minified!")
       %script{ src: "js/vendor/onsenui-dev.js" }
     - else
       %script{ src: "js/vendor/onsen.js" }
-    %link{ href: "css/index.css", rel: "stylesheet", type: "text/css" }/
-    %title <3itcoin LN wallet
   %body
     .app
-      %template{:id => "page.html"}
-        test
+      - TEMPLATES.each do |template_name|
+        %template{ id: "#{template_name}.html" }
+          %ons-page
+            - partial template_name
 
       %ons-splitter
-        %ons-splitter-side#menu{ collapse: "",  side: "left",  swipeable: true,  width: "220px"}
+        %ons-splitter-side#splitter{ collapse: true,  side: "left",  swipeable: true,  width: "220px" }
           %ons-page
             %ons-list
-              %ons-list-item{ onclick: "fn.load('receive.html')",  tappable: ""}
-        -# %ons-splitter-content#content{:page => "page.html"}
-        %ons-splitter-content#content
-          %ons-page
-            - partial "receive"
+              %ons-list-item{ tappable: true, onclick: "fn.load('tabbar.html')" }
+                Home
+              %ons-list-item{ tappable: true, onclick: "fn.load('settings.html')" }
+                Settings
 
-      -# %ons-splitter
-      -#   %ons-splitter-side#menu{ collapse: "",  side: "left",  swipeable: true,  width: "220px"}
-      -#     %ons-page
-      -#       %ons-list
-      -#         %ons-list-item{ onclick: "fn.load('receive.html')",  tappable: ""}
-      -#           Home
-      -#         %ons-list-item{ onclick: "fn.load('settings.html')",  tappable: ""}
-      -#           Settings
-      -#         %ons-list-item{ onclick: "fn.load('about.html')",  tappable: ""}
-      -#           About
-      -#   %ons-splitter-content#content{ page: "receive.html" }
-
-      -# %ons-tabbar#main-tabbar{ position: "bottom" }
-      -#
-      -#   %ons-tab.receive{ class: "active", active: true, badge: "7",  icon: "ion-md-arrow-down", label: "Receive", page: "receive.html" }
-      -#
-      -#   %ons-tab.send{ icon: "ion-md-arrow-up", label: "Send", page: "send.html" }
-      -#
-      -#   %ons-tab.transactions{ icon: "ion-md-list", label: "Transactions", page: "transactions.html" }
-
-      -# page templates:
+        -# %ons-splitter-content#content{ page: "send.html" }
+        -# %ons-splitter-content#content{ page: "transactions.html" }
+        %ons-splitter-content#content{ page: "tabbar.html" }
 
 
-    -# %script{ src: "cordova.js",  type: "text/javascript" }
+
+    %script{ src: "cordova.js",  type: "text/javascript" }
     -# %script{ src: "node_modules/hyperhtml/min.js",  type: "text/javascript" }
-    -# %script{ src: "js/index.js", type: "text/javascript" }
+    %script{ src: "js/index.js", type: "text/javascript" }
