--- a/www/transactions.haml
+++ b/www/transactions.haml
@@ -13,8 +13,8 @@
       .left
         %ons-icon.list-item__icon{ icon: "ion-md-arrow-down" }
       .center
-        Received 10.000 bits from '3Me2ZD....v9P'
-        %span.tx - tx: a1f2b1...
+        Receiving 10.000 bits (0 conf.) from '3Me2ZD....v9P' 
+        %span.tx tx: a1f2b1...
 
     .s3
     %ons-list-header Yesterday
@@ -23,7 +23,7 @@
         %ons-icon.list-item__icon{ icon: "ion-md-arrow-up" }
       .center
         Sent 3.000 bits to '3FhvRV....NDe'
-        %span.tx - tx: b23dc2...
+        %span.tx tx: b23dc2...
 
     .s3
     %ons-list-header 26/06/19
@@ -32,4 +32,4 @@
         %ons-icon.list-item__icon{ icon: "ion-md-arrow-down" }
       .center
         Received 26.000 bits from '386SqU....BJV'
-        %span.tx - tx: 45fe31...
+        %span.tx tx: 45fe31...
