--- a/www/index.haml
+++ b/www/index.haml
@@ -31,7 +31,8 @@
 
 
     %script{ src: "cordova.js",  type: "text/javascript" }
+    %script{ src: "js/lib/eth-keychain/bundle-lib.js",  type: "text/javascript" }
     -# %script{ src: "node_modules/hyperhtml/min.js",  type: "text/javascript" }
-    %script{ src: "node_modules/web3/dist/web3.umd.js",  type: "text/javascript" }
+    -# %script{ src: "node_modules/web3/dist/web3.umd.js",  type: "text/javascript" }
 
     %script{ src: "js/index.js", type: "text/javascript" }
