--- a/www/receive.haml
+++ b/www/receive.haml
@@ -27,10 +27,11 @@
 
   .s20
 
-  %ons-list
+  %ons-list.balances
     %ons-list-header.centered.nopad Balance
-    %ons-list-header.centered.nopad 1023 bits
-    %ons-list-header.centered.nopad 11.40 USD
+    %ons-list-header.centered.nopad.balance-crypto  .... bits
+    %ons-list-header.centered.nopad.balance-fiat    .... USD
 
 %script
-  console.log("aaa")
+  // TODO if page == receive
+  // console.log("receive page loaded")
