--- a/www/send.haml
+++ b/www/send.haml
@@ -32,7 +32,8 @@
     %ons-list-item
       .s10
       %p.w-full.t-center
-        %ons-button.centered{ modifier: "large", onclick: "fn.walletSend()" } Send
+        %ons-button.centered.padded{ modifier: "large", onclick: "fn.walletSend()" } Send
+        -# unsure to add the .fw-bold or not to the button (minimalistic/cool-ui vs usability consideration)
 
 -# %ons-fab{ position: "bottom right" }
 -#   %ons-icon{ icon: "ion-md-send" }
