--- a/www/_head.haml
+++ b/www/_head.haml
@@ -12,4 +12,4 @@
 %link{ href: "css/vendor/onsen-comp.css", rel: "stylesheet" }/
 %link{ href: "css/vendor/onsen-theme.css", rel: "stylesheet" }/
 %link{ href: "css/index.css", rel: "stylesheet", type: "text/css" }/
-%title <3itcoin LN wallet
+%title xDAI wallet
