--- a/www/transactions.haml
+++ b/www/transactions.haml
@@ -13,8 +13,8 @@
       .left
         %ons-icon.list-item__icon{ icon: "ion-md-arrow-down" }
       .center
-        Receiving 10.000 bits (0 conf.) from '3Me2ZD....v9P' 
-        %span.tx tx: a1f2b1...
+        Receiving 10 USDs (0 conf.) from '0xadd4344....b31'
+        %span.tx tx: 0xa1f2b1...
 
     .s3
     %ons-list-header Yesterday
@@ -22,8 +22,8 @@
       .left
         %ons-icon.list-item__icon{ icon: "ion-md-arrow-up" }
       .center
-        Sent 3.000 bits to '3FhvRV....NDe'
-        %span.tx tx: b23dc2...
+        Sent 3.123 USDs to '0xadd43442....a23'
+        %span.tx tx: 0xb23dc2...
 
     .s3
     %ons-list-header 26/06/19
@@ -31,5 +31,5 @@
       .left
         %ons-icon.list-item__icon{ icon: "ion-md-arrow-down" }
       .center
-        Received 26.000 bits from '386SqU....BJV'
-        %span.tx tx: 45fe31...
+        Received 26.2 USD weis from '0xadd43443....a21'
+        %span.tx tx: 0x45fe31...
