--- a/www/send.haml
+++ b/www/send.haml
@@ -8,12 +8,12 @@
 .centered
   .s30
 
-  %ons-button
+  %ons-button.btn-width-150
     %i.ion-md-qr-scanner
     \&nbsp;
     Scan QR
   .s10
-  %ons-button
+  %ons-button.btn-width-150
     %i.ion-md-clipboard
     \&nbsp;
     Paste
