updated css classes on html components

--- a/www/_head.haml
+++ b/www/_head.haml
@@ -9,7 +9,7 @@
     #{INJ_FONT_CSS}
 %link{ href: "css/vendor/ionic-icons.css", rel: "stylesheet" }/
 %link{ href: "css/vendor/onsen.css", rel: "stylesheet" }/
-%link{ href: "css/vendor/onsen-comp.css", rel: "stylesheet" }/
-%link{ href: "css/vendor/onsen-theme.css", rel: "stylesheet" }/
+%link{ href: "css/vendor/theme/onsen-css-components.min.css", rel: "stylesheet" }/
+%link{ href: "css/vendor/theme/theme.css", rel: "stylesheet" }/
 %link{ href: "css/index.css", rel: "stylesheet", type: "text/css" }/
 %title xDAI wallet
