--- a/www/send.haml
+++ b/www/send.haml
@@ -8,27 +8,32 @@
 .centered
   .s30
 
-  %ons-button.btn-width-150
-    %i.ion-md-qr-scanner
-    \&nbsp;
-    Scan QR
-  .s10
-  %ons-button.btn-width-150
-    %i.ion-md-clipboard
-    \&nbsp;
-    Paste
+  %ons-row
+    %ons-col
+    %ons-col
+      %ons-button.btn-width-150.btn.btn-info
+        %i.ion-md-qr-scanner
+        \&nbsp;
+        Scan QR
+    %ons-col
+    %ons-col
+      %ons-button.btn-width-150.btn.btn-info
+        %i.ion-md-clipboard
+        \&nbsp;
+        Paste
+    %ons-col
 
-  .s20
-  %ons-list.send-form{ modifier: "inset" }
+
+  .s80
+  %ons-list.send-form
     %ons-list-item
       .s10
-      %p
-        %ons-input.recipient-address{ float: "",  modifier: "underbar",  placeholder: "Recipient",  type: "text" }
-    %ons-list-header.t-center
+      %p.wfull
+        %ons-input.recipient-address.wfull{ float: "",  modifier: "underbar",  placeholder: "Recipient",  type: "text" }
     %ons-list-item
       .s30
-      %p
-        %ons-input.send-amount{ float: "",  modifier: "underbar",  placeholder: "Amount (USD weis)",  type: "text" }
+      %p.wfull
+        %ons-input.send-amount.wfull{ float: "",  modifier: "underbar",  placeholder: "Amount (USD weis)",  type: "text" }
     %ons-list-item
       .s10
       %p.w-full.t-center
