implementing unused buttons and settings btn next

--- a/www/receive.haml
+++ b/www/receive.haml
@@ -4,7 +4,7 @@
     %ons-toolbar-button
       / TODO: bind click evt
       %a.refresh-btn
-        %ons-icon{ icon: "ion-md-settings" }
+        %ons-icon.icon-main-right.icon-settings{ icon: "ion-md-settings" }
 
 .s50
 .receive-screen.centered
