--- a/www/index.haml
+++ b/www/index.haml
@@ -38,6 +38,9 @@
     -# %script{ src: "node_modules/hyperhtml/min.js",  type: "text/javascript" }
     -# %script{ src: "node_modules/web3/dist/web3.umd.js",  type: "text/javascript" }
 
+    // dev version imports - TODO: remove for open beta release
+    %script{ src: "js/lib/bind-unused-btns.js", type: "text/javascript" }
+
     %script{ src: "js/utils.js", type: "text/javascript" }
     %script{ src: "js/view.js", type: "text/javascript" }
     %script{ src: "js/app.js", type: "text/javascript" }
