--- a/www/transactions.haml
+++ b/www/transactions.haml
@@ -3,7 +3,7 @@
   .right
     %ons-toolbar-button
       %a.refresh-btn{ onclick: "fn.refreshPage()" }
-        %ons-icon{ icon: "ion-md-settings" }
+        %ons-icon.icon-main-right.icon-settings{ icon: "ion-md-settings" }
 
 .centered
 
