--- a/www/receive.haml
+++ b/www/receive.haml
@@ -3,7 +3,7 @@
   .right
     %ons-toolbar-button
       / TODO: bind click evt
-      %a.refresh-btn
+      %a.btn-settings.button-settings.settings-button
         %ons-icon.icon-main-right.icon-settings{ icon: "ion-md-settings" }
 
 .s50
@@ -22,7 +22,7 @@
     %ons-list-item.input-items
       .right
         %a{ href: "#" }
-          %ons-icon.list-item__icon{ icon: "ion-md-copy"}
+          %ons-icon.list-item__icon.icon-copy.btn.btn-copy.button-copy{ icon: "ion-md-copy"}
       %label.centered
         -# .receive-screen .receive-address-input
         %ons-input.receive-address-input.nomargin.w-full.centered.text-grey{ readonly: true, value: "..." }
