--- a/www/send.haml
+++ b/www/send.haml
@@ -2,7 +2,7 @@
   .center Send
   .right
     %ons-toolbar-button
-      %a.refresh-btn{ onclick: "fn.refreshPage()" }
+      %a.btn-settings.button-settings.settings-button
         %ons-icon.icon-main-right.icon-settings{ icon: "ion-md-settings" }
 
 .centered
