send and balance auto update working, I'm satisfied, today or tomorrow TX list implementation

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -72,6 +72,13 @@ ons-icon .ion-md-arrow-down {
   display: none;
 }
 
+/* toasts copypaste fix */
+
+.modals, .toast,  {
+  user-select: all;
+
+}
+
 /* screens - transactions */
 
 .transactions.tx-list  {
