--- a/www/send.haml
+++ b/www/send.haml
@@ -33,7 +33,7 @@
     %ons-list-item
       .s30
       %p.wfull
-        %ons-input.send-amount.wfull{ float: "",  modifier: "underbar",  placeholder: "Amount (USD weis)",  type: "text" }
+        %ons-input.send-amount.wfull{ float: "",  modifier: "underbar",  placeholder: "Amount (#{Conf.currency})",  type: "text" }
     %ons-list-item
       .s10
       %p.w-full.t-center
