--- a/www/transactions.haml
+++ b/www/transactions.haml
@@ -13,7 +13,7 @@
       .left
         %ons-icon.list-item__icon{ icon: "ion-md-arrow-down" }
       .center
-        Receiving 10 USDs (0 conf.) from '0xadd4344....b31'
+        Receiving 10 #{Conf.currency} (0 conf.) from '0xadd4344....b31'
         %span.tx tx: 0xa1f2b1...
 
     .s3
@@ -22,7 +22,7 @@
       .left
         %ons-icon.list-item__icon{ icon: "ion-md-arrow-up" }
       .center
-        Sent 3.123 USDs to '0xadd43442....a23'
+        Sent 3.123 #{Conf.currency} to '0xadd43442....a23'
         %span.tx tx: 0xb23dc2...
 
     .s3
@@ -31,5 +31,5 @@
       .left
         %ons-icon.list-item__icon{ icon: "ion-md-arrow-down" }
       .center
-        Received 26.2 USD weis from '0xadd43443....a21'
+        Received 26.2 #{Conf.currency} from '0xadd43443....a21'
         %span.tx tx: 0x45fe31...
