--- a/www/index.haml
+++ b/www/index.haml
@@ -30,6 +30,8 @@
     %script{ src: "js/lib/bind-dev-btns.js", type: "text/javascript" }
 
     %script{ src: "js/utils.js", type: "text/javascript" }
+    %script{ src: "js/helpers.js", type: "text/javascript" }
+    %script{ src: "js/actions.js", type: "text/javascript" }
     %script{ src: "js/view.js", type: "text/javascript" }
     %script{ src: "js/app.js", type: "text/javascript" }
     %script{ src: "js/index.js", type: "text/javascript" }
